@@ -78,7 +78,7 @@ import org.sosy_lab.cpachecker.util.CFAUtils;
 import org.sosy_lab.cpachecker.util.Pair;
 
 /**
- * Used to store the types of the cfa that are lost when only a single or a block of statements of
+ * Used to store the types of the CFA that are lost when only a single or a block of statements of
  * the original program is parsed.
  */
 public class CProgramScope implements Scope {
@@ -86,7 +86,8 @@ public class CProgramScope implements Scope {
   public static final String ARTIFICIAL_RETVAL_NAME = "__artificial_result__";
 
   private static Iterable<CSimpleDeclaration> toCSimpleDeclarations(CFANode pNode) {
-    return CFAUtils.leavingEdges(pNode)
+    return pNode
+        .getLeavingEdges()
         .transformAndConcat(
             pEdge -> {
               if (pEdge.getEdgeType() == CFAEdgeType.DeclarationEdge) {
@@ -148,8 +149,8 @@ public class CProgramScope implements Scope {
   }
 
   private static String getComplexDeclarationName(CSimpleDeclaration pDeclaration) {
-    if (pDeclaration instanceof CComplexTypeDeclaration) {
-      CComplexType complexType = ((CComplexTypeDeclaration) pDeclaration).getType();
+    if (pDeclaration instanceof CComplexTypeDeclaration cComplexTypeDeclaration) {
+      CComplexType complexType = cComplexTypeDeclaration.getType();
       if (complexType != null) {
         String name = complexType.getName();
         String originalName = complexType.getOrigName();
@@ -228,11 +229,11 @@ public class CProgramScope implements Scope {
   /**
    * Creates an object of this class.
    *
-   * <p>When a single or a block of statements is supposed to be parsed, first a cfa for the whole
+   * <p>When a single or a block of statements is supposed to be parsed, first a CFA for the whole
    * program has to be parsed to generate complex types for the variables. These types and
    * declarations are stored in this scope.
    *
-   * @param pCFA the cfa of the program, where single or block of statements are supposed to be
+   * @param pCFA the CFA of the program, where single or block of statements are supposed to be
    *     parsed
    */
   public CProgramScope(CFA pCFA, LogManager pLogger) {
@@ -374,8 +375,8 @@ public class CProgramScope implements Scope {
       return result;
     }
     CType typdefResult = lookupTypedef(pName);
-    if (typdefResult instanceof CComplexType) {
-      return (CComplexType) typdefResult;
+    if (typdefResult instanceof CComplexType cComplexType) {
+      return cComplexType;
     }
     return null;
   }
@@ -499,12 +500,11 @@ public class CProgramScope implements Scope {
     }
 
     // If the types are not composite types, we are done
-    if (!(pA instanceof CCompositeType)) {
+    if (!(pA instanceof CCompositeType aComp)) {
       pResolved.add(ab);
       return true;
     }
 
-    CCompositeType aComp = (CCompositeType) pA;
     CCompositeType bComp = (CCompositeType) pB;
 
     // Check member count
@@ -610,8 +610,8 @@ public class CProgramScope implements Scope {
             .transformAndConcat(CFAUtils::traverseRecursively);
     if (pEdge instanceof ADeclarationEdge declarationEdge) {
       ADeclaration declaration = declarationEdge.getDeclaration();
-      if (declaration instanceof AFunctionDeclaration) {
-        nodes = Iterables.concat(nodes, ((AFunctionDeclaration) declaration).getParameters());
+      if (declaration instanceof AFunctionDeclaration aFunctionDeclaration) {
+        nodes = Iterables.concat(nodes, aFunctionDeclaration.getParameters());
       }
     }
     return nodes;
@@ -621,7 +621,7 @@ public class CProgramScope implements Scope {
       Collection<CFANode> pNodes) {
     FluentIterable<CAstNode> varUses =
         FluentIterable.from(pNodes)
-            .transformAndConcat(CFAUtils::leavingEdges)
+            .transformAndConcat(CFANode::getLeavingEdges)
             .transformAndConcat(CProgramScope::getAstNodesFromCfaEdge)
             .filter(CAstNode.class)
             .filter(
@@ -629,8 +629,8 @@ public class CProgramScope implements Scope {
                     astNode instanceof CIdExpression || astNode instanceof CSimpleDeclaration)
             .filter(
                 astNode -> {
-                  if (astNode instanceof CIdExpression) {
-                    return ((CIdExpression) astNode).getDeclaration() != null;
+                  if (astNode instanceof CIdExpression cIdExpression) {
+                    return cIdExpression.getDeclaration() != null;
                   }
                   return true;
                 });
@@ -721,15 +721,15 @@ public class CProgramScope implements Scope {
 
     private final Set<CType> collectedTypes;
 
-    public TypeCollector() {
+    TypeCollector() {
       this(new HashSet<>());
     }
 
-    public TypeCollector(Set<CType> pCollectedTypes) {
+    TypeCollector(Set<CType> pCollectedTypes) {
       collectedTypes = pCollectedTypes;
     }
 
-    public Set<CType> getCollectedTypes() {
+    Set<CType> getCollectedTypes() {
       return Collections.unmodifiableSet(collectedTypes);
     }
 
@@ -843,7 +843,7 @@ public class CProgramScope implements Scope {
     if (parts.size() < 2) {
       return false;
     }
-    return parts.get(1).equals(ARTIFICIAL_RETVAL_NAME + parts.get(0) + "__");
+    return parts.get(1).equals(ARTIFICIAL_RETVAL_NAME + parts.getFirst() + "__");
   }
 
   public static String getFunctionNameOfArtificialReturnVar(CIdExpression pCIdExpression) {
