@@ -20,7 +20,6 @@ import java.util.Iterator;
 import java.util.Map;
 import java.util.Map.Entry;
 import org.checkerframework.checker.nullness.qual.Nullable;
-import org.sosy_lab.cpachecker.cmdline.CmdLineArguments.InvalidCmdlineArgumentException;
 
 abstract class CmdLineArgument implements Comparable<CmdLineArgument> {
 
@@ -45,7 +44,7 @@ abstract class CmdLineArgument implements Comparable<CmdLineArgument> {
   }
 
   String getMainName() {
-    return names.asList().get(0);
+    return names.asList().getFirst();
   }
 
   @Override
@@ -58,7 +57,7 @@ abstract class CmdLineArgument implements Comparable<CmdLineArgument> {
     if (this == o) {
       return true;
     }
-    return o instanceof CmdLineArgument && names.equals(((CmdLineArgument) o).names);
+    return o instanceof CmdLineArgument cmdLineArgument && names.equals(cmdLineArgument.names);
   }
 
   @Override
