@@ -32,9 +32,7 @@ public class ImportDecomposition implements DssBlockDecomposition {
 
   public ImportDecomposition(Path pImportFile) throws IOException {
     ObjectMapper objectMapper = new ObjectMapper();
-    blocks =
-        objectMapper.readValue(
-            pImportFile.toFile(), new TypeReference<Map<String, ImportedBlock>>() {});
+    blocks = objectMapper.readValue(pImportFile.toFile(), new TypeReference<>() {});
     for (ImportedBlock value : blocks.values()) {
       if (value.edges().stream().anyMatch(e -> e.size() != 2)) {
         throw new IllegalArgumentException(
@@ -58,7 +56,7 @@ public class ImportDecomposition implements DssBlockDecomposition {
       ImmutableSet<CFANode> cfaNodes =
           edges.transformAndConcat(e -> e).transform(nodeIdMap::get).toSet();
       ImmutableSet<CFAEdge> cfaEdges =
-          edges.transform(e -> edgeIdsMap.get(e.get(0) + " " + e.get(1))).toSet();
+          edges.transform(e -> edgeIdsMap.get(e.getFirst() + " " + e.get(1))).toSet();
       nodes.add(
           new BlockNodeWithoutGraphInformation(
               importedBlock.getKey(),
