@@ -21,10 +21,10 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.SequencedMap;
 import org.sosy_lab.cpachecker.cfa.model.CFAEdge;
 import org.sosy_lab.cpachecker.cfa.model.CFANode;
 import org.sosy_lab.cpachecker.core.algorithm.distributed_summaries.decomposition.graph.BlockNodeWithoutGraphInformation;
-import org.sosy_lab.cpachecker.util.CFAUtils;
 
 public class STBridges {
 
@@ -68,17 +68,17 @@ public class STBridges {
           CFANode last = null;
           CFANode first = null;
 
-          for (CFANode cfaNode : connection) {
-            boolean hasSuccessorInIncludes = false;
-            boolean hasSuccessorOutOfIncludes = false;
-            for (CFAEdge leavingEdge : CFAUtils.leavingEdges(cfaNode)) {
-              if (includes.contains(leavingEdge.getSuccessor())) {
-                connectionEdges.add(leavingEdge);
-                hasSuccessorInIncludes = true;
-              } else {
-                hasSuccessorOutOfIncludes = true;
-              }
+        for (CFANode cfaNode : connection) {
+          boolean hasSuccessorInIncludes = false;
+          boolean hasSuccessorOutOfIncludes = false;
+          for (CFAEdge leavingEdge : cfaNode.getLeavingEdges()) {
+            if (includes.contains(leavingEdge.getSuccessor())) {
+              connectionEdges.add(leavingEdge);
+              hasSuccessorInIncludes = true;
+            } else {
+              hasSuccessorOutOfIncludes = true;
             }
+          }
 
             if (!hasSuccessorInIncludes) {
               // terminating functions may cause 0 successors, too
@@ -91,15 +91,15 @@ public class STBridges {
               last = cfaNode;
             }
 
-            boolean hasPredecessorInIncludes = false;
-            boolean hasPredecessorOutOfIncludes = false;
-            for (CFAEdge enteringEdge : CFAUtils.enteringEdges(cfaNode)) {
-              if (includes.contains(enteringEdge.getPredecessor())) {
-                hasPredecessorInIncludes = true;
-              } else {
-                hasPredecessorOutOfIncludes = true;
-              }
+          boolean hasPredecessorInIncludes = false;
+          boolean hasPredecessorOutOfIncludes = false;
+          for (CFAEdge enteringEdge : cfaNode.getEnteringEdges()) {
+            if (includes.contains(enteringEdge.getPredecessor())) {
+              hasPredecessorInIncludes = true;
+            } else {
+              hasPredecessorOutOfIncludes = true;
             }
+          }
 
             if (!hasPredecessorInIncludes) {
               first = cfaNode;
@@ -138,7 +138,7 @@ public class STBridges {
     Deque<List<CFAEdge>> paths = new ArrayDeque<>();
     CFANode mainFunction = blockNode.getInitialLocation();
     CFANode exitNode = blockNode.getFinalLocation();
-    for (CFAEdge leavingEdge : CFAUtils.leavingEdges(mainFunction)) {
+    for (CFAEdge leavingEdge : mainFunction.getLeavingEdges()) {
 
       if (blockNode.getEdges().contains(leavingEdge)) {
         List<CFAEdge> path = new ArrayList<>();
@@ -148,12 +148,12 @@ public class STBridges {
     }
     while (!paths.isEmpty()) {
       List<CFAEdge> currentPath = paths.removeFirst();
-      CFAEdge lastEdge = currentPath.get(currentPath.size() - 1);
+      CFAEdge lastEdge = currentPath.getLast();
       CFANode lastNode = lastEdge.getSuccessor();
       if (lastNode.equals(exitNode)) {
         return currentPath;
       }
-      for (CFAEdge leavingEdge : CFAUtils.leavingEdges(lastNode)) {
+      for (CFAEdge leavingEdge : lastNode.getLeavingEdges()) {
         if (blockNode.getEdges().contains(leavingEdge)) {
           List<CFAEdge> copy = new ArrayList<>(currentPath);
           copy.add(leavingEdge);
@@ -172,7 +172,7 @@ public class STBridges {
    * @return All s-t bridges in <code>pCFA</code>.
    */
   public static BridgeComponents computeBridges(BlockNodeWithoutGraphInformation blockNode) {
-    Map<CFANode, Integer> comp = new LinkedHashMap<>();
+    SequencedMap<CFANode, Integer> comp = new LinkedHashMap<>();
     CFANode exitNode = blockNode.getFinalLocation();
 
     for (CFANode node : blockNode.getNodes()) {
@@ -230,7 +230,7 @@ public class STBridges {
       CFANode pNode, List<CFAEdge> pFlipped, BlockNodeWithoutGraphInformation blockNode) {
     ImmutableSet<CFAEdge> copy = ImmutableSet.copyOf(pFlipped);
     ImmutableSet.Builder<CFANode> successors = ImmutableSet.builder();
-    for (CFAEdge leavingEdge : CFAUtils.leavingEdges(pNode)) {
+    for (CFAEdge leavingEdge : pNode.getLeavingEdges()) {
       if (!copy.contains(leavingEdge) && blockNode.getEdges().contains(leavingEdge)) {
         successors.add(leavingEdge.getSuccessor());
       }
