@@ -12,13 +12,12 @@ import com.google.common.collect.ImmutableSet;
 import java.util.ArrayList;
 import java.util.LinkedHashSet;
 import java.util.List;
-import java.util.Set;
+import java.util.SequencedSet;
 import org.sosy_lab.cpachecker.cfa.CFA;
 import org.sosy_lab.cpachecker.cfa.model.CFAEdge;
 import org.sosy_lab.cpachecker.cfa.model.CFANode;
 import org.sosy_lab.cpachecker.core.algorithm.distributed_summaries.decomposition.graph.BlockGraph;
 import org.sosy_lab.cpachecker.core.algorithm.distributed_summaries.decomposition.graph.BlockNodeWithoutGraphInformation;
-import org.sosy_lab.cpachecker.util.CFAUtils;
 
 public class SingleBlockDecomposition implements DssBlockDecomposition {
 
@@ -27,10 +26,10 @@ public class SingleBlockDecomposition implements DssBlockDecomposition {
     CFANode lastNode = null;
     ImmutableSet.Builder<CFAEdge> edges = ImmutableSet.builder();
     List<CFANode> waitlist = new ArrayList<>();
-    Set<CFANode> seen = new LinkedHashSet<>();
+    SequencedSet<CFANode> seen = new LinkedHashSet<>();
     waitlist.add(cfa.getMainFunction());
     while (!waitlist.isEmpty()) {
-      CFANode current = waitlist.remove(0);
+      CFANode current = waitlist.removeFirst();
       if (seen.contains(current)) {
         continue;
       }
@@ -39,7 +38,7 @@ public class SingleBlockDecomposition implements DssBlockDecomposition {
         lastNode = current;
       }
       seen.add(current);
-      for (CFAEdge leavingEdge : CFAUtils.allLeavingEdges(current)) {
+      for (CFAEdge leavingEdge : current.getAllLeavingEdges()) {
         edges.add(leavingEdge);
         waitlist.add(leavingEdge.getSuccessor());
       }
@@ -47,7 +46,6 @@ public class SingleBlockDecomposition implements DssBlockDecomposition {
     assert seen.containsAll(cfa.nodes());
     assert lastNode != null;
     return BlockGraph.fromBlockNodesWithoutGraphInformation(
-        cfa,
         ImmutableSet.of(
             new BlockNodeWithoutGraphInformation(
                 "SB1",
