@@ -82,7 +82,7 @@ public class CallstackTest {
       List<ARGState> coveredStates =
           argStates.transformAndConcat(ARGState::getCoveredByThis).toList();
       assert_().withMessage("exactly one covered state expected").that(coveredStates).hasSize(1);
-      CFANode coverageLocation = AbstractStates.extractLocation(coveredStates.get(0));
+      CFANode coverageLocation = AbstractStates.extractLocation(coveredStates.getFirst());
       assert_()
           .withMessage("expected coverage only in main")
           .that(coverageLocation.getFunctionName())
