@@ -12,7 +12,6 @@ import com.google.common.collect.FluentIterable;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.Lists;
-import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Path;
@@ -69,7 +68,6 @@ public class SlicingAbstractionsTest {
   private Map<String, String> extraOptions;
 
   @Parameters(name = "{3}: {0}")
-  @SuppressFBWarnings("NP_NULL_ON_SOME_PATH_FROM_RETURN_VALUE")
   public static Collection<Object[]> data() {
     File taskfolder = new File(TEST_DIR_PATH);
     List<Object> files =
@@ -116,7 +114,7 @@ public class SlicingAbstractionsTest {
             .transform(
                 x -> {
                   Object[] result = new Object[4];
-                  result[0] = x.get(0);
+                  result[0] = x.getFirst();
                   result[1] = x.get(1);
                   result[2] = new HashMap<String, String>();
                   result[3] =
@@ -131,7 +129,7 @@ public class SlicingAbstractionsTest {
             .transform(
                 x -> {
                   Object[] result = new Object[4];
-                  result[0] = x.get(0);
+                  result[0] = x.getFirst();
                   result[1] = x.get(1);
                   result[2] = new HashMap<String, String>();
                   result[3] =
@@ -148,7 +146,7 @@ public class SlicingAbstractionsTest {
   private static Object[] repack(List<Object> x) {
     Object[] result = new Object[4];
 
-    result[0] = x.get(0); // file to test
+    result[0] = x.getFirst(); // file to test
     result[1] = x.get(1); // config to test file with
 
     // result[2] will contain a map of extra options taken from x at positions 2-4
