@@ -10,7 +10,6 @@ package org.sosy_lab.cpachecker.cpa.sign;
 
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.Sets;
-import java.math.BigDecimal;
 import java.math.BigInteger;
 import java.util.List;
 import java.util.Set;
@@ -37,6 +36,7 @@ import org.sosy_lab.cpachecker.cfa.types.c.CSimpleType;
 import org.sosy_lab.cpachecker.cfa.types.c.CTypedefType;
 import org.sosy_lab.cpachecker.exceptions.UnrecognizedCodeException;
 import org.sosy_lab.cpachecker.exceptions.UnsupportedCodeException;
+import org.sosy_lab.cpachecker.util.floatingpoint.FloatValue;
 
 public class SignCExpressionVisitor
     extends DefaultCExpressionVisitor<Sign, UnrecognizedCodeException>
@@ -111,7 +111,7 @@ public class SignCExpressionVisitor
         Sets.cartesianProduct(ImmutableList.of(leftAtomSigns, rightAtomSigns))) {
       result =
           result.combineWith(
-              evaluateExpression(signCombi.get(0), pIastBinaryExpression, signCombi.get(1)));
+              evaluateExpression(signCombi.getFirst(), pIastBinaryExpression, signCombi.get(1)));
     }
     return result;
   }
@@ -142,14 +142,12 @@ public class SignCExpressionVisitor
   @Override
   public Sign visit(CFloatLiteralExpression pIastFloatLiteralExpression)
       throws UnrecognizedCodeException {
-    BigDecimal value = pIastFloatLiteralExpression.getValue();
-    int cResult = value.compareTo(BigDecimal.ZERO);
-    if (cResult == 1) {
-      return Sign.PLUS;
-    } else if (cResult == -1) {
-      return Sign.MINUS;
+    FloatValue value = pIastFloatLiteralExpression.getValue();
+    if (value.isZero()) {
+      return Sign.ZERO;
+    } else {
+      return value.isNegative() ? Sign.MINUS : Sign.PLUS;
     }
-    return Sign.ZERO;
   }
 
   @Override
@@ -178,7 +176,7 @@ public class SignCExpressionVisitor
   @Override
   public Sign visit(CUnaryExpression pIastUnaryExpression) throws UnrecognizedCodeException {
     switch (pIastUnaryExpression.getOperator()) {
-      case MINUS:
+      case MINUS -> {
         Sign result = Sign.EMPTY;
         Sign operandSign = pIastUnaryExpression.getOperand().accept(this);
         for (Sign atomSign : operandSign.split()) {
@@ -187,8 +185,9 @@ public class SignCExpressionVisitor
                   evaluateUnaryExpression(pIastUnaryExpression.getOperator(), atomSign));
         }
         return result;
-      default:
-        throw new UnsupportedCodeException("Not supported", edgeOfExpr, pIastUnaryExpression);
+      }
+      default ->
+          throw new UnsupportedCodeException("Not supported", edgeOfExpr, pIastUnaryExpression);
     }
   }
 
@@ -206,19 +205,19 @@ public class SignCExpressionVisitor
       Sign pLeft, CExpression pLeftExp, Sign pRight, CExpression pRightExp) {
     // Special case: - + 1 => -0, 1 + - => -0
     if ((pLeft == Sign.MINUS
-            && (pRightExp instanceof CIntegerLiteralExpression)
-            && ((CIntegerLiteralExpression) pRightExp).getValue().equals(BigInteger.ONE))
-        || ((pLeftExp instanceof CIntegerLiteralExpression)
-            && ((CIntegerLiteralExpression) pLeftExp).getValue().equals(BigInteger.ONE)
+            && (pRightExp instanceof CIntegerLiteralExpression rightExp)
+            && rightExp.getValue().equals(BigInteger.ONE))
+        || ((pLeftExp instanceof CIntegerLiteralExpression leftExp)
+            && leftExp.getValue().equals(BigInteger.ONE)
             && pRight == Sign.MINUS)) {
       return Sign.MINUS0;
     }
     // Special case: +0 + 1 => +, 1 + +0 => +
     if ((pLeft == Sign.PLUS0
-            && (pRightExp instanceof CIntegerLiteralExpression)
-            && ((CIntegerLiteralExpression) pRightExp).getValue().equals(BigInteger.ONE))
-        || ((pLeftExp instanceof CIntegerLiteralExpression)
-            && ((CIntegerLiteralExpression) pLeftExp).getValue().equals(BigInteger.ONE)
+            && (pRightExp instanceof CIntegerLiteralExpression rightExp)
+            && rightExp.getValue().equals(BigInteger.ONE))
+        || ((pLeftExp instanceof CIntegerLiteralExpression leftExp)
+            && leftExp.getValue().equals(BigInteger.ONE)
             && pRight == Sign.PLUS0)) {
       return Sign.PLUS;
     }
@@ -246,14 +245,14 @@ public class SignCExpressionVisitor
   private Sign evaluateMinusOperator(Sign pLeft, Sign pRight, CExpression pRightExp) {
     // Special case: + - 1 => +0
     if (pLeft == Sign.PLUS
-        && (pRightExp instanceof CIntegerLiteralExpression)
-        && ((CIntegerLiteralExpression) pRightExp).getValue().equals(BigInteger.ONE)) {
+        && (pRightExp instanceof CIntegerLiteralExpression cIntegerLiteralExpression)
+        && cIntegerLiteralExpression.getValue().equals(BigInteger.ONE)) {
       return Sign.PLUS0;
     }
     // Special case: -0 - 1 => -
     if (pLeft == Sign.MINUS0
-        && (pRightExp instanceof CIntegerLiteralExpression)
-        && ((CIntegerLiteralExpression) pRightExp).getValue().equals(BigInteger.ONE)) {
+        && (pRightExp instanceof CIntegerLiteralExpression cIntegerLiteralExpression)
+        && cIntegerLiteralExpression.getValue().equals(BigInteger.ONE)) {
       return Sign.MINUS;
     }
     if (pRight == Sign.ZERO) {
@@ -336,39 +335,38 @@ public class SignCExpressionVisitor
       return Sign.EMPTY;
     }
     switch (pLeft) {
-      case PLUS:
+      case PLUS -> {
         if (Sign.MINUS0.covers(pRight)) {
           return Sign.ZERO;
         }
-        break;
-      case MINUS:
+      }
+      case MINUS -> {
         if (Sign.PLUS0.covers(pRight)) {
           return Sign.ZERO;
         }
-        break;
-      case ZERO:
+      }
+      case ZERO -> {
         if (Sign.MINUS0.covers(pRight)) {
           return Sign.ZERO;
         }
         if (pRight == Sign.ZERO) {
           return Sign.PLUSMINUS;
         }
-        break;
-      case PLUS0:
+      }
+      case PLUS0 -> {
         if (pRight == Sign.MINUS) {
           return Sign.ZERO;
         }
         if (pRight == Sign.ZERO) {
           return Sign.PLUSMINUS;
         }
-        break;
-      case MINUS0:
+      }
+      case MINUS0 -> {
         if (pRight == Sign.PLUS) {
           return Sign.PLUSMINUS;
         }
-        break;
-      default:
-        break;
+      }
+      default -> {}
     }
     return Sign.ALL;
   }
@@ -378,36 +376,35 @@ public class SignCExpressionVisitor
       return Sign.EMPTY;
     }
     switch (pLeft) {
-      case PLUS:
+      case PLUS -> {
         if (Sign.MINUS0.covers(pRight)) {
           return Sign.ZERO;
         }
-        break;
-      case MINUS:
+      }
+      case MINUS -> {
         if (Sign.PLUS0.covers(pRight)) {
           return Sign.ZERO;
         }
-        break;
-      case ZERO:
+      }
+      case ZERO -> {
         if (Sign.PLUS0.covers(pRight)) {
           return Sign.PLUSMINUS;
         }
         if (pRight == Sign.MINUS) {
           return Sign.ZERO;
         }
-        break;
-      case PLUS0:
+      }
+      case PLUS0 -> {
         if (pRight == Sign.MINUS) {
           return Sign.ZERO;
         }
-        break;
-      case MINUS0:
+      }
+      case MINUS0 -> {
         if (pRight == Sign.PLUS) {
           return Sign.PLUSMINUS;
         }
-        break;
-      default:
-        break;
+      }
+      default -> {}
     }
     return Sign.ALL;
   }
@@ -427,18 +424,23 @@ public class SignCExpressionVisitor
       return Sign.EMPTY;
     }
 
-    if (pLeft == Sign.PLUS) {
-      if (pRight == Sign.ZERO || pRight == Sign.MINUS) {
-        return Sign.PLUSMINUS;
+    switch (pLeft) {
+      case PLUS -> {
+        if (pRight == Sign.ZERO || pRight == Sign.MINUS) {
+          return Sign.PLUSMINUS;
+        }
       }
-    } else if (pLeft == Sign.ZERO) {
-      if (pRight == Sign.PLUS || pRight == Sign.MINUS) {
-        return Sign.PLUSMINUS;
+      case ZERO -> {
+        if (pRight == Sign.PLUS || pRight == Sign.MINUS) {
+          return Sign.PLUSMINUS;
+        }
       }
-    } else if (pLeft == Sign.MINUS) {
-      if (pRight == Sign.ZERO || pRight == Sign.PLUS) {
-        return Sign.PLUSMINUS;
+      case MINUS -> {
+        if (pRight == Sign.ZERO || pRight == Sign.PLUS) {
+          return Sign.PLUSMINUS;
+        }
       }
+      default -> {}
     }
 
     return Sign.ALL;
