@@ -22,8 +22,9 @@ import org.sosy_lab.common.configuration.Configuration;
 import org.sosy_lab.common.configuration.InvalidConfigurationException;
 import org.sosy_lab.common.log.LogManager;
 import org.sosy_lab.common.log.LogManagerWithoutDuplicates;
-import org.sosy_lab.cpachecker.cfa.DummyCFAEdge;
+import org.sosy_lab.cpachecker.cfa.ast.FileLocation;
 import org.sosy_lab.cpachecker.cfa.ast.c.CFunctionDeclaration;
+import org.sosy_lab.cpachecker.cfa.model.BlankEdge;
 import org.sosy_lab.cpachecker.cfa.model.CFAEdge;
 import org.sosy_lab.cpachecker.cfa.model.CFANode;
 import org.sosy_lab.cpachecker.cfa.types.MachineModel;
@@ -41,8 +42,8 @@ import org.sosy_lab.cpachecker.cpa.value.type.NumericValue;
 import org.sosy_lab.cpachecker.cpa.value.type.Value;
 import org.sosy_lab.cpachecker.exceptions.CPATransferException;
 import org.sosy_lab.cpachecker.util.predicates.pathformula.ctoformula.CtoFormulaConverter;
+import org.sosy_lab.cpachecker.util.predicates.pathformula.pointeraliasing.CFormulaEncodingWithPointerAliasingOptions;
 import org.sosy_lab.cpachecker.util.predicates.pathformula.pointeraliasing.CToFormulaConverterWithPointerAliasing;
-import org.sosy_lab.cpachecker.util.predicates.pathformula.pointeraliasing.FormulaEncodingWithPointerAliasingOptions;
 import org.sosy_lab.cpachecker.util.predicates.pathformula.pointeraliasing.TypeHandlerWithPointerAliasing;
 import org.sosy_lab.cpachecker.util.predicates.smt.FormulaManagerView;
 import org.sosy_lab.cpachecker.util.predicates.smt.Solver;
@@ -79,8 +80,13 @@ public class SMGCPATest0 {
   // Some tasks define their own list length, as e.g. nested lists get quite expensive fast
   protected static final int TEST_LIST_LENGTH = 50;
 
-  protected CFAEdge dummyCDAEdge =
-      new DummyCFAEdge(CFANode.newDummyCFANode(), CFANode.newDummyCFANode());
+  protected CFAEdge dummyCFAEdge =
+      new BlankEdge(
+          "dummy edge",
+          FileLocation.DUMMY,
+          CFANode.newDummyCFANode(),
+          CFANode.newDummyCFANode(),
+          "dummy for tests");
 
   // The visitor should always use the currentState!
   @Before
@@ -93,7 +99,7 @@ public class SMGCPATest0 {
     dllSize = pointerSizeInBits.multiply(BigInteger.valueOf(3));
     dllSizeValue = new NumericValue(dllSize);
     sllSizeValue = new NumericValue(sllSize);
-    // Per default we expect the nfo after the hfo and the pfo after that
+    // By default, we expect the nfo after the hfo and the pfo after that
     nfo = hfo.add(pointerSizeInBits);
     pfo = nfo.add(pointerSizeInBits);
     logger = new LogManagerWithoutDuplicates(LogManager.createTestLogManager());
@@ -125,8 +131,8 @@ public class SMGCPATest0 {
     Solver smtSolver =
         Solver.create(Configuration.defaultConfiguration(), logger, ShutdownNotifier.createDummy());
     FormulaManagerView formulaManager = smtSolver.getFormulaManager();
-    FormulaEncodingWithPointerAliasingOptions formulaOptions =
-        new FormulaEncodingWithPointerAliasingOptions(Configuration.defaultConfiguration());
+    CFormulaEncodingWithPointerAliasingOptions formulaOptions =
+        new CFormulaEncodingWithPointerAliasingOptions(Configuration.defaultConfiguration());
     TypeHandlerWithPointerAliasing typeHandler =
         new TypeHandlerWithPointerAliasing(logger, machineModel, formulaOptions);
 
@@ -143,6 +149,7 @@ public class SMGCPATest0 {
 
     return new ConstraintsSolver(
         Configuration.defaultConfiguration(),
+        machineModel,
         smtSolver,
         formulaManager,
         converter,
@@ -212,7 +219,7 @@ public class SMGCPATest0 {
             numericPointerSizeInBits,
             new NumericValue(0),
             null,
-            dummyCDAEdge);
+            dummyCFAEdge);
 
     // Pointer to the next list segment
     currentState =
@@ -222,7 +229,7 @@ public class SMGCPATest0 {
             numericPointerSizeInBits,
             listPtrs[0],
             null,
-            dummyCDAEdge);
+            dummyCFAEdge);
     if (dll) {
       currentState =
           currentState.writeValueWithChecks(
@@ -231,7 +238,7 @@ public class SMGCPATest0 {
               numericPointerSizeInBits,
               new NumericValue(0),
               null,
-              dummyCDAEdge);
+              dummyCFAEdge);
       List<SMGStateAndOptionalSMGObjectAndOffset> derefedFirstAbstrListElem =
           currentState.dereferencePointer(listPtrs[0]);
       ValueAndSMGState ptrToFirstNotAbstrAndState =
@@ -240,12 +247,12 @@ public class SMGCPATest0 {
       Value ptrToFirstNotAbstr = ptrToFirstNotAbstrAndState.getValue();
       currentState =
           currentState.writeValueWithChecks(
-              derefedFirstAbstrListElem.get(0).getSMGObject(),
+              derefedFirstAbstrListElem.getFirst().getSMGObject(),
               new NumericValue(pfo),
               numericPointerSizeInBits,
               ptrToFirstNotAbstr,
               null,
-              dummyCDAEdge);
+              dummyCFAEdge);
     }
 
     SMGObject listSegmentBack = SMGObject.of(0, segmentSize, BigInteger.ZERO);
@@ -257,7 +264,7 @@ public class SMGCPATest0 {
             numericPointerSizeInBits,
             new NumericValue(0),
             null,
-            dummyCDAEdge);
+            dummyCFAEdge);
     currentState =
         currentState.writeValueWithChecks(
             listSegmentBack,
@@ -265,7 +272,7 @@ public class SMGCPATest0 {
             numericPointerSizeInBits,
             new NumericValue(0),
             null,
-            dummyCDAEdge);
+            dummyCFAEdge);
     if (dll) {
       currentState =
           currentState.writeValueWithChecks(
@@ -274,25 +281,25 @@ public class SMGCPATest0 {
               numericPointerSizeInBits,
               listPtrs[listLength - 3],
               null,
-              dummyCDAEdge);
+              dummyCFAEdge);
     }
 
     // Pointer from the last to be abstracted list to the last
     List<SMGStateAndOptionalSMGObjectAndOffset> derefedLastAbstrListElem =
         currentState.dereferencePointer(listPtrs[listLength - 3]);
     assertThat(derefedLastAbstrListElem).hasSize(1);
-    assertThat(derefedLastAbstrListElem.get(0).hasSMGObjectAndOffset()).isTrue();
+    assertThat(derefedLastAbstrListElem.getFirst().hasSMGObjectAndOffset()).isTrue();
     ValueAndSMGState ptrToLastAndState =
         currentState.searchOrCreateAddress(listSegmentBack, otherPtrOffset);
     currentState = ptrToLastAndState.getState();
     currentState =
         currentState.writeValueWithChecks(
-            derefedLastAbstrListElem.get(0).getSMGObject(),
+            derefedLastAbstrListElem.getFirst().getSMGObject(),
             new NumericValue(nfo),
             numericPointerSizeInBits,
             ptrToLastAndState.getValue(),
             null,
-            dummyCDAEdge);
+            dummyCFAEdge);
 
     return ImmutableList.<Value>builder()
         .add(ptrToFrontAndState.getValue())
@@ -325,7 +332,7 @@ public class SMGCPATest0 {
                 new NumericValue(pointerSizeInBits),
                 new NumericValue(j),
                 null,
-                dummyCDAEdge);
+                dummyCFAEdge);
       }
 
       // Pointer to the next list segment (from the prev to this, except for the last)
@@ -338,7 +345,7 @@ public class SMGCPATest0 {
                 numericPointerSizeInBits,
                 nextPointer,
                 null,
-                dummyCDAEdge);
+                dummyCFAEdge);
       }
       if (prevObject != null) {
         ValueAndSMGState pointerAndState =
@@ -351,7 +358,7 @@ public class SMGCPATest0 {
                 numericPointerSizeInBits,
                 pointerAndState.getValue(),
                 null,
-                dummyCDAEdge);
+                dummyCFAEdge);
       }
 
       if (dll) {
@@ -372,7 +379,7 @@ public class SMGCPATest0 {
                 numericPointerSizeInBits,
                 prevPointer,
                 null,
-                dummyCDAEdge);
+                dummyCFAEdge);
       }
       if (i == 0 || i == listLength - 1) {
         // Pointer to the list segment
@@ -395,12 +402,12 @@ public class SMGCPATest0 {
                   new NumericValue(pointerSizeInBits),
                   pointerAndState.getValue(),
                   null,
-                  dummyCDAEdge);
+                  dummyCFAEdge);
         } catch (CPATransferException e) {
-          if (e instanceof SMGException) {
-            throw (SMGException) e;
-          } else if (e instanceof SMGSolverException) {
-            throw (SMGSolverException) e;
+          if (e instanceof SMGException sMGException) {
+            throw sMGException;
+          } else if (e instanceof SMGSolverException sMGSolverException) {
+            throw sMGSolverException;
           }
           // This can never happen, but we are forced to do this as the visitor demands the
           // CPATransferException
@@ -422,12 +429,12 @@ public class SMGCPATest0 {
                   numericPointerSizeInBits,
                   pointerAndState.getValue(),
                   null,
-                  dummyCDAEdge);
+                  dummyCFAEdge);
         } catch (CPATransferException e) {
-          if (e instanceof SMGException) {
-            throw (SMGException) e;
-          } else if (e instanceof SMGSolverException) {
-            throw (SMGSolverException) e;
+          if (e instanceof SMGException sMGException) {
+            throw sMGException;
+          } else if (e instanceof SMGSolverException sMGSolverException) {
+            throw sMGSolverException;
           }
           // This can never happen, but we are forced to do this as the visitor demands the
           // CPATransferException
@@ -510,7 +517,7 @@ public class SMGCPATest0 {
                 numericPointerSizeInBits,
                 new NumericValue(valueStart + j),
                 null,
-                dummyCDAEdge);
+                dummyCFAEdge);
       }
 
       // Pointer to the next list segment (from the prev to this, except for the last)
@@ -523,7 +530,7 @@ public class SMGCPATest0 {
                 numericPointerSizeInBits,
                 nextPointer,
                 null,
-                dummyCDAEdge);
+                dummyCFAEdge);
       }
       if (prevObject != null) {
         ValueAndSMGState pointerAndState =
@@ -536,7 +543,7 @@ public class SMGCPATest0 {
                 numericPointerSizeInBits,
                 pointerAndState.getValue(),
                 null,
-                dummyCDAEdge);
+                dummyCFAEdge);
       }
 
       if (dll) {
@@ -557,7 +564,7 @@ public class SMGCPATest0 {
                 numericPointerSizeInBits,
                 prevPointer,
                 null,
-                dummyCDAEdge);
+                dummyCFAEdge);
       }
       // Pointer to the list segment
       ValueAndSMGState pointerAndState =
@@ -581,7 +588,7 @@ public class SMGCPATest0 {
                 numericPointerSizeInBits,
                 pointer,
                 null,
-                dummyCDAEdge);
+                dummyCFAEdge);
       }
     }
     if (valueStart == 0) {
@@ -622,7 +629,7 @@ public class SMGCPATest0 {
    * Checks that all pointers given have data that is located in the beginning of the list as 32bit
    * integers with the first being 0, then +1 for each after that in the same list.
    *
-   * @param pointers a array of pointers pointing to a list with the default data scheme.
+   * @param pointers an array of pointers pointing to a list with the default data scheme.
    */
   protected void checkListDataIntegrity(Value[] pointers, boolean dll) throws SMGException {
     int toCheckData = sllSize.divide(pointerSizeInBits).subtract(BigInteger.ONE).intValue();
@@ -646,8 +653,8 @@ public class SMGCPATest0 {
                 pointerSizeInBits,
                 null);
         currentState = readDataWithoutMaterialization.getState();
-        assertThat(readDataWithoutMaterialization.getValue().isNumericValue()).isTrue();
-        assertThat(readDataWithoutMaterialization.getValue().asNumericValue().bigIntegerValue())
+        assertThat(readDataWithoutMaterialization.getValue() instanceof NumericValue).isTrue();
+        assertThat(((NumericValue) readDataWithoutMaterialization.getValue()).bigIntegerValue())
             .isEquivalentAccordingToCompareTo(BigInteger.valueOf(j));
       }
     }
@@ -674,7 +681,7 @@ public class SMGCPATest0 {
               new NumericValue(BigInteger.valueOf(sizeOfElements)),
               valuesInOrder[i],
               null,
-              dummyCDAEdge);
+              dummyCFAEdge);
     }
 
     return array;
