@@ -32,6 +32,7 @@ import org.sosy_lab.cpachecker.cpa.smg2.SMGState.EqualityCache;
 import org.sosy_lab.cpachecker.cpa.smg2.SymbolicProgramConfiguration;
 import org.sosy_lab.cpachecker.cpa.smg2.util.SMGException;
 import org.sosy_lab.cpachecker.cpa.smg2.util.SMGValueAndSMGState;
+import org.sosy_lab.cpachecker.cpa.value.type.NumericValue;
 import org.sosy_lab.cpachecker.cpa.value.type.Value;
 import org.sosy_lab.cpachecker.util.smg.SMG;
 import org.sosy_lab.cpachecker.util.smg.datastructures.PersistentSet;
@@ -255,7 +256,7 @@ public class SMGCPAAbstractionManager {
     ImmutableSet.Builder<SMGCandidate> foundChains = ImmutableSet.builder();
     for (SMGObject heapObj : heapObjs) {
       if (!smg.isValid(heapObj)
-          || !heapObj.getSize().isNumericValue()
+          || !(heapObj.getSize() instanceof NumericValue heapObjSize)
           || alreadySeen.contains(heapObj)) {
         continue;
       }
@@ -269,13 +270,11 @@ public class SMGCPAAbstractionManager {
           // will be found via the prev object
           continue;
         }
-        SMGValue nextPointerValue = readNfoEdges.get(0).hasValue();
+        SMGValue nextPointerValue = readNfoEdges.getFirst().hasValue();
         if (!smg.isPointer(nextPointerValue)
-            || !smg.getPTEdge(nextPointerValue).orElseThrow().getOffset().isNumericValue()
-            || !smg.getPTEdge(nextPointerValue)
-                .orElseThrow()
-                .getOffset()
-                .asNumericValue()
+            || !(smg.getPTEdge(nextPointerValue).orElseThrow().getOffset()
+                instanceof NumericValue numNextPointerOffset)
+            || !numNextPointerOffset
                 .bigIntegerValue()
                 .equals(sllHeapObj.getNextPointerTargetOffset())) {
           // Incorrect or not usable next element, maybe a prev exists though, don't put current in
@@ -285,12 +284,8 @@ public class SMGCPAAbstractionManager {
         SMGObject target = smg.getPTEdge(nextPointerValue).orElseThrow().pointsTo();
         if (target != heapObj
             && smg.isValid(target)
-            && target.getSize().isNumericValue()
-            && target
-                .getSize()
-                .asNumericValue()
-                .bigIntegerValue()
-                .equals(sllHeapObj.getSize().asNumericValue().bigIntegerValue())) {
+            && target.getSize() instanceof NumericValue numTargetSize
+            && numTargetSize.bigIntegerValue().equals(heapObjSize.bigIntegerValue())) {
 
           SMGCandidateOrRejectedObject maybeCandidate =
               lookThroughObject(
@@ -319,7 +314,7 @@ public class SMGCPAAbstractionManager {
           // Can't be a list if there is no pointers
           continue;
         }
-        BigInteger heapObjSize = heapObj.getSize().asNumericValue().bigIntegerValue();
+        BigInteger heapObjSizeBigInt = heapObjSize.bigIntegerValue();
         SMGCandidateOrRejectedObject maybeCandidate = null;
         // Search through all possible values of the object first, remember to reject the obj if
         // nothing is found
@@ -337,19 +332,19 @@ public class SMGCPAAbstractionManager {
             // pointerTargetOffset is the offset of the pointer towards to target, not the offset
             // of any value! This has to be the same for all ptrs between list elements!
             Value pointerTargetOffset = pointsToEdge.getOffset();
-            Preconditions.checkArgument(pointerTargetOffset.isNumericValue());
+            Preconditions.checkArgument(pointerTargetOffset instanceof NumericValue);
 
             if (target != heapObj
                 && smg.isValid(target)
-                && target.getSize().isNumericValue()
-                && target.getSize().asNumericValue().bigIntegerValue().equals(heapObjSize)) {
+                && target.getSize() instanceof NumericValue numTargetSize
+                && numTargetSize.bigIntegerValue().equals(heapObjSizeBigInt)) {
 
               maybeCandidate =
                   lookThroughObject(
                       heapObj,
                       target,
                       ptrValueOffsetInHeapObj,
-                      pointerTargetOffset.asNumericValue().bigIntegerValue(),
+                      ((NumericValue) pointerTargetOffset).bigIntegerValue(),
                       alreadySeen);
               if (maybeCandidate.isListCandidate()) {
                 SMGCandidate candidate = maybeCandidate.getCandidate();
@@ -480,9 +475,9 @@ public class SMGCPAAbstractionManager {
         if (maybePrevPTE.isPresent() && maybePrevPTE.orElseThrow().pointsTo().equals(currentObj)) {
           maybePfo = Optional.of(nextValueEdge.getOffset());
           Value pteTargetOffsetValue = maybePrevPTE.orElseThrow().getOffset();
-          Preconditions.checkArgument(pteTargetOffsetValue.isNumericValue());
+          Preconditions.checkArgument(pteTargetOffsetValue instanceof NumericValue);
           maybePrevPointerTargetOffset =
-              Optional.of(pteTargetOffsetValue.asNumericValue().bigIntegerValue());
+              Optional.of(((NumericValue) pteTargetOffsetValue).bigIntegerValue());
         }
       }
     }
@@ -533,7 +528,7 @@ public class SMGCPAAbstractionManager {
     SMGHasValueEdge nextPtrOfLeftmost =
         smg.readValue(leftMostObj, suspectedNfo, state.getMemoryModel().getSizeOfPointer(), false)
             .getHvEdges()
-            .get(0);
+            .getFirst();
     Preconditions.checkArgument(smg.isPointer(nextPtrOfLeftmost.hasValue()));
     SMGObject nextOfLeftmost = smg.getPTEdge(nextPtrOfLeftmost.hasValue()).orElseThrow().pointsTo();
     // TODO: use read instead of looping through the offsets in both lookThroughs
@@ -654,7 +649,7 @@ public class SMGCPAAbstractionManager {
                       smg.getSizeOfPointer(),
                       false)
                   .getHvEdges()
-                  .get(0);
+                  .getFirst();
           if (smg.isPointer(maybeRealNext.hasValue())
               && smg.getPTEdge(maybeRealNext.hasValue()).orElseThrow().pointsTo().equals(prevObj)) {
             return ListType.NONE;
@@ -712,8 +707,8 @@ public class SMGCPAAbstractionManager {
               // pointerTargetOffset is the offset of the pointer towards to target, not the offset
               // of any value! This has to be the same for all ptrs between list elements!
               Value pteTargetOffset = pointsToEdge.getOffset();
-              Preconditions.checkArgument(pteTargetOffset.isNumericValue());
-              BigInteger pointerTargetOffset = pteTargetOffset.asNumericValue().bigIntegerValue();
+              Preconditions.checkArgument(pteTargetOffset instanceof NumericValue);
+              BigInteger pointerTargetOffset = ((NumericValue) pteTargetOffset).bigIntegerValue();
               if (nextPointerTargetOffset.equals(pointerTargetOffset)) {
                 // viable next pointer and possibly viable next obj
                 return lookThroughNext(
@@ -783,7 +778,7 @@ public class SMGCPAAbstractionManager {
                   false)
               .getHvEdges();
       Preconditions.checkArgument(maybeReadBackPtrs.size() == 1);
-      SMGHasValueEdge maybeReadBackPtr = maybeReadBackPtrs.get(0);
+      SMGHasValueEdge maybeReadBackPtr = maybeReadBackPtrs.getFirst();
       if (smg.isPointer(maybeReadBackPtr.hasValue())) {
         // possible back-pointer
         SMGPointsToEdge maybeBackPointerEdge =
@@ -814,11 +809,8 @@ public class SMGCPAAbstractionManager {
         Set<SMGObject> objsWithPtrsTowardsHeapObj =
             smg.getValuesToRegionsTheyAreSavedIn().get(ptrValue).keySet();
         SMGPointsToEdge pte = smg.getPTEdge(ptrValue).orElseThrow();
-        if (!pte.getOffset().isNumericValue()
-            || !pte.getOffset()
-                .asNumericValue()
-                .bigIntegerValue()
-                .equals(nextPointerTargetOffset)) {
+        if (!(pte.getOffset() instanceof NumericValue pteOffset)
+            || !pteOffset.bigIntegerValue().equals(nextPointerTargetOffset)) {
           continue;
         }
 
@@ -984,7 +976,7 @@ public class SMGCPAAbstractionManager {
     BigInteger nfo = pMaybeConnectedCandidate.getSuspectedNfo();
 
     if (!state.getMemoryModel().getSmg().isValid(pCurrentObj)
-        || !pCurrentObj.getSize().isNumericValue()
+        || !(pCurrentObj.getSize() instanceof NumericValue)
         || !pMaybeConnectedCandidate.object.isSizeEqual(pCurrentObj)) {
       return false;
     }
@@ -1073,8 +1065,8 @@ public class SMGCPAAbstractionManager {
     }
 
     int addSize = 1;
-    if (root instanceof SMGSinglyLinkedListSegment) {
-      addSize = ((SMGSinglyLinkedListSegment) root).getMinLength();
+    if (root instanceof SMGSinglyLinkedListSegment sMGSinglyLinkedListSegment) {
+      addSize = sMGSinglyLinkedListSegment.getMinLength();
     }
 
     for (SMGHasValueEdge hve : smg.getEdges(root)) {
@@ -1128,7 +1120,7 @@ public class SMGCPAAbstractionManager {
     Set<SMGCandidate> candidates = new HashSet<>();
     Set<SMGObject> alreadyVisited = new HashSet<>();
     for (SMGObject heapObj : state.getMemoryModel().getHeapObjects()) {
-      if (!smg.isValid(heapObj) || !heapObj.getSize().isNumericValue()) {
+      if (!smg.isValid(heapObj) || !(heapObj.getSize() instanceof NumericValue)) {
         continue;
       }
       Optional<SMGCandidate> possibleCandidate =
@@ -1242,12 +1234,13 @@ public class SMGCPAAbstractionManager {
         pState.getMemoryModel().getSmg().getPTEdge(value).orElseThrow().pointsTo();
     Value rootObjSize = root.getSize();
     Value nextObjSize = nextObject.getSize();
-    if (!rootObjSize.isNumericValue() || !nextObjSize.isNumericValue()) {
+    if (!(rootObjSize instanceof NumericValue numRootObjSize)
+        || !(nextObjSize instanceof NumericValue numNextObjSize)) {
       throw new SMGException(
           "Symbolic memory size in linked list abstraction not supported at the moment.");
     }
-    BigInteger rootObjConcreteSize = rootObjSize.asNumericValue().bigIntegerValue();
-    BigInteger nextObjConcreteSize = nextObjSize.asNumericValue().bigIntegerValue();
+    BigInteger rootObjConcreteSize = numRootObjSize.bigIntegerValue();
+    BigInteger nextObjConcreteSize = numNextObjSize.bigIntegerValue();
     if (!pState.getMemoryModel().getSmg().isValid(nextObject)
         || rootObjConcreteSize.compareTo(nextObjConcreteSize) != 0) {
       return Optional.empty();
@@ -1385,7 +1378,7 @@ public class SMGCPAAbstractionManager {
     // We abort after we find 1 valid pointer for the candidate
     ImmutableList<SMGHasValueEdge> sortedPointersList =
         ImmutableList.sortedCopyOf(Comparator.comparing(SMGHasValueEdge::getOffset), setOfPointers);
-    // If there are no targets that match this one, this is either a end part or not a list
+    // If there are no targets that match this one, this is either an end part or not a list
     if (setOfPointers.isEmpty()) {
       return Optional.empty();
     }
@@ -1453,11 +1446,11 @@ public class SMGCPAAbstractionManager {
   private ImmutableSet<SMGHasValueEdge> getPointersToSameSizeObjects(
       SMGObject root, SMG pInputSmg, Set<SMGObject> alreadyVisited) throws SMGException {
     Value rootObjSize = root.getSize();
-    if (!rootObjSize.isNumericValue()) {
+    if (!(rootObjSize instanceof NumericValue numRootObjSize)) {
       throw new SMGException(
           "Symbolic memory size in linked list abstraction not supported at the moment.");
     }
-    BigInteger rootObjConcreteSize = rootObjSize.asNumericValue().bigIntegerValue();
+    BigInteger rootObjConcreteSize = numRootObjSize.bigIntegerValue();
     ImmutableSet.Builder<SMGHasValueEdge> res = ImmutableSet.builder();
     for (SMGHasValueEdge hve : pInputSmg.getEdges(root)) {
       SMGValue value = hve.hasValue();
@@ -1468,18 +1461,13 @@ public class SMGCPAAbstractionManager {
         if (alreadyVisited.contains(reachedObject)) {
           continue;
         }
-        if (!reachedObject.getSize().isNumericValue()) {
+        if (!(reachedObject.getSize() instanceof NumericValue numReachedObjSize)) {
           throw new SMGException(
               "Symbolic memory size in linked list abstraction not supported at the moment.");
         }
         // If the followup is invalid or size does not match, next
         if (!pInputSmg.isValid(reachedObject)
-            || reachedObject
-                    .getSize()
-                    .asNumericValue()
-                    .bigIntegerValue()
-                    .compareTo(rootObjConcreteSize)
-                != 0) {
+            || numReachedObjSize.bigIntegerValue().compareTo(rootObjConcreteSize) != 0) {
           continue;
         }
 
@@ -1497,11 +1485,11 @@ public class SMGCPAAbstractionManager {
       SMGObject root, SMG pInputSmg, Set<SMGObject> alreadyVisted, BigInteger offsetToAvoid)
       throws SMGException {
     Value rootObjSize = root.getSize();
-    if (!rootObjSize.isNumericValue()) {
+    if (!(rootObjSize instanceof NumericValue numRootObjSize)) {
       throw new SMGException(
           "Symbolic memory size in linked list abstraction not supported at the moment.");
     }
-    BigInteger rootObjConcreteSize = rootObjSize.asNumericValue().bigIntegerValue();
+    BigInteger rootObjConcreteSize = numRootObjSize.bigIntegerValue();
     ImmutableSet.Builder<SMGHasValueEdge> res = ImmutableSet.builder();
     for (SMGHasValueEdge hve : pInputSmg.getEdges(root)) {
       SMGValue value = hve.hasValue();
@@ -1515,18 +1503,13 @@ public class SMGCPAAbstractionManager {
         if (alreadyVisted.contains(reachedObject)) {
           continue;
         }
-        if (!reachedObject.getSize().isNumericValue()) {
+        if (!(reachedObject.getSize() instanceof NumericValue numReachedObjectSize)) {
           throw new SMGException(
               "Symbolic memory size in linked list abstraction not supported at the moment.");
         }
         // If the followup is invalid or size does not match, next
         if (!pInputSmg.isValid(reachedObject)
-            || reachedObject
-                    .getSize()
-                    .asNumericValue()
-                    .bigIntegerValue()
-                    .compareTo(rootObjConcreteSize)
-                != 0) {
+            || numReachedObjectSize.bigIntegerValue().compareTo(rootObjConcreteSize) != 0) {
           continue;
         }
 
