@@ -32,7 +32,6 @@ import org.sosy_lab.cpachecker.core.interfaces.ConfigurableProgramAnalysisWithBA
 import org.sosy_lab.cpachecker.core.interfaces.StateSpacePartition;
 import org.sosy_lab.cpachecker.core.interfaces.TransferRelation;
 import org.sosy_lab.cpachecker.cpa.testtargets.reduction.TestTargetAdaption;
-import org.sosy_lab.cpachecker.util.CFAUtils;
 
 @Options(prefix = "testcase")
 public class TestTargetCPA extends AbstractCPA implements ConfigurableProgramAnalysisWithBAM {
@@ -125,12 +124,12 @@ public class TestTargetCPA extends AbstractCPA implements ConfigurableProgramAna
     List<String> components = Splitter.on('#').splitToList(targetEdge);
     if (components.size() > 1) {
       try {
-        int predNum = Integer.parseInt(components.get(0));
+        int predNum = Integer.parseInt(components.getFirst());
         int edgeID = Integer.parseInt(components.get(1));
         Optional<CFANode> pred =
             pCfa.nodes().stream().filter(node -> (node.getNodeNumber() == predNum)).findFirst();
         if (pred.isPresent()) {
-          for (CFAEdge edge : CFAUtils.allLeavingEdges(pred.orElseThrow())) {
+          for (CFAEdge edge : pred.orElseThrow().getAllLeavingEdges()) {
             if (System.identityHashCode(edge) == edgeID) {
               return ImmutableSet.of(edge);
             }
@@ -159,5 +158,9 @@ public class TestTargetCPA extends AbstractCPA implements ConfigurableProgramAna
   @Override
   public TestTargetPrecisionAdjustment getPrecisionAdjustment() {
     return precisionAdjustment;
+  }
+
+  public boolean isRunInParallel() {
+    return runParallel;
   }
 }
