@@ -111,7 +111,7 @@ public class SymbolicValueAnalysisRefiner
 
   @Option(
       secure = true,
-      description = "whether or not to do lazy-abstraction",
+      description = "whether to do lazy-abstraction",
       name = "restart",
       toUppercase = true)
   private RestartStrategy restartStrategy = RestartStrategy.PIVOT;
@@ -294,9 +294,8 @@ public class SymbolicValueAnalysisRefiner
           Set<SymbolicIdentifier> usedIdentifiers = new HashSet<>();
           for (Entry<MemoryLocation, ValueAndType> e : currentValueState.getConstants()) {
             Value v = e.getValue().getValue();
-            if (v instanceof SymbolicValue) {
-              usedIdentifiers.addAll(
-                  ((SymbolicValue) v).accept(SymbolicIdentifierLocator.getInstance()));
+            if (v instanceof SymbolicValue symbolicValue) {
+              usedIdentifiers.addAll(symbolicValue.accept(SymbolicIdentifierLocator.getInstance()));
             }
           }
           ExpressionValueVisitor valueVisitor =
@@ -353,7 +352,7 @@ public class SymbolicValueAnalysisRefiner
         Value v = e.getValue().getValue();
         CType t = (CType) e.getValue().getType();
         CExpressionStatement exp;
-        toCExpressionVisitor = new ValueToCExpressionTransformer(t);
+        toCExpressionVisitor = new ValueToCExpressionTransformer(machineModel, t);
         CExpression rhs = v.accept(toCExpressionVisitor);
         CExpression lhs = getCorrespondingIdExpression(e.getKey(), t);
         CExpression assignment =
@@ -370,7 +369,7 @@ public class SymbolicValueAnalysisRefiner
       ConstraintsState newConstraints = new ConstraintsState(tempSet);
 
       for (Constraint c : newConstraints) {
-        toCExpressionVisitor = new ValueToCExpressionTransformer((CType) c.getType());
+        toCExpressionVisitor = new ValueToCExpressionTransformer(machineModel, (CType) c.getType());
         CExpressionStatement exp =
             new CExpressionStatement(FileLocation.DUMMY, c.accept(toCExpressionVisitor));
         assumptions.add(exp);
@@ -381,12 +380,12 @@ public class SymbolicValueAnalysisRefiner
         symbolicInfo.append(System.lineSeparator());
       }
       CFAEdgeWithAssumptions edgeWithAssumption =
-          new CFAEdgeWithAssumptions(p.getSecond().get(0), assumptions.build(), "");
+          new CFAEdgeWithAssumptions(p.getSecond().getFirst(), assumptions.build(), "");
       symbolicInfo.append(edgeWithAssumption.prettyPrintCode(1));
       currentState = nextState;
     }
 
-    currentState = stateSequence.get(stateSequence.size() - 1).getFirst();
+    currentState = stateSequence.getLast().getFirst();
     ConstraintsState finalConstraints = currentState.getConstraintsState();
 
     List<ValueAssignment> assignments = finalConstraints.getModel();
