@@ -124,7 +124,7 @@ class AssignmentFormulaHandler {
     }
   }
 
-  private final FormulaEncodingWithPointerAliasingOptions options;
+  private final CFormulaEncodingWithPointerAliasingOptions options;
   private final FormulaManagerView fmgr;
   private final BooleanFormulaManagerView bfmgr;
   private final BitvectorFormulaManagerView bvmgr;
@@ -311,7 +311,7 @@ class AssignmentFormulaHandler {
 
     // Handle full-span assignments upfront, this is better than via the loop below.
     if (rhsList.size() == 1) {
-      final ResolvedPartialAssignmentRhs rhs = rhsList.get(0);
+      final ResolvedPartialAssignmentRhs rhs = rhsList.getFirst();
       final PartialSpan rhsSpan = rhs.span();
       if (rhsSpan.isFullSpan(lhsBitSize) && lhsBitSize == targetBitSize) {
 
@@ -432,7 +432,7 @@ class AssignmentFormulaHandler {
   }
 
   /**
-   * Construct an span-sized bitvector formula containing the part of given right-hand-side formula,
+   * Construct a span-sized bitvector formula containing the part of given right-hand-side formula,
    * as determined by {@code rhsSpan}.
    *
    * @param rhs Resolved array slice containing the expression to convert and type we are converting
@@ -473,7 +473,7 @@ class AssignmentFormulaHandler {
   }
 
   /**
-   * Construct an bitvector formula retaining a range of bits from a given bitvector.
+   * Construct a bitvector formula retaining a range of bits from a given bitvector.
    *
    * @param formula Bitvector formula.
    * @param retainedRange The range determining the bits to retain. The range is assumed to be
@@ -689,9 +689,9 @@ class AssignmentFormulaHandler {
 
     for (final MemoryRegion region : regions) {
       final String ufName = regionMgr.getPointerAccessName(region);
-      final int oldIndex = conv.getIndex(ufName, region.getType(), ssa);
+      final int oldIndex = conv.getExistingOrNewIndex(ufName, region.getType(), ssa);
       final int newIndex = conv.getFreshIndex(ufName, region.getType(), ssa);
-      final FormulaType<?> targetType = conv.getFormulaTypeFromCType(region.getType());
+      final FormulaType<?> targetType = conv.getFormulaTypeFromType(region.getType());
 
       // forall counter : !condition => retentionConstraint
       // is equivalent to:
@@ -747,7 +747,7 @@ class AssignmentFormulaHandler {
         region = regionMgr.makeMemoryRegion(lvalueType);
       } else { // CCompositeType
         CCompositeTypeMemberDeclaration memberDeclaration =
-            ((CCompositeType) lvalueType).getMembers().get(0);
+            ((CCompositeType) lvalueType).getMembers().getFirst();
         region = regionMgr.makeMemoryRegion(lvalueType, memberDeclaration);
       }
       // for lvalueType
@@ -775,9 +775,9 @@ class AssignmentFormulaHandler {
 
     for (final MemoryRegion region : regions) {
       final String ufName = regionMgr.getPointerAccessName(region);
-      final int oldIndex = conv.getIndex(ufName, region.getType(), ssa);
+      final int oldIndex = conv.getExistingOrNewIndex(ufName, region.getType(), ssa);
       final int newIndex = conv.getFreshIndex(ufName, region.getType(), ssa);
-      final FormulaType<?> targetType = conv.getFormulaTypeFromCType(region.getType());
+      final FormulaType<?> targetType = conv.getFormulaTypeFromType(region.getType());
 
       for (final PointerTarget target : targetLookup.apply(region)) {
         regionMgr.addTargetToStats(ufName);
@@ -902,7 +902,7 @@ class AssignmentFormulaHandler {
     checkArgument(isSimpleType(rvalueType));
     assert !(lvalueType instanceof CFunctionType) : "Can't assign to functions";
 
-    final FormulaType<?> targetType = conv.getFormulaTypeFromCType(lvalueType);
+    final FormulaType<?> targetType = conv.getFormulaTypeFromType(lvalueType);
     BooleanFormula result;
 
     Formula rhs;
@@ -936,7 +936,7 @@ class AssignmentFormulaHandler {
         // add the condition
         // either the condition holds and the assignment should be done,
         // or the condition does not hold and the previous value should be copied
-        final int oldIndex = conv.getIndex(targetName, lvalueType, ssa);
+        final int oldIndex = conv.getExistingOrNewIndex(targetName, lvalueType, ssa);
         Formula oldVariable = fmgr.makeVariable(targetType, targetName, oldIndex);
 
         Formula newVariable = fmgr.makeVariable(targetType, targetName, newIndex);
@@ -952,7 +952,7 @@ class AssignmentFormulaHandler {
       }
       final String targetName = regionMgr.getPointerAccessName(region);
 
-      final int oldIndex = conv.getIndex(targetName, lvalueType, ssa);
+      final int oldIndex = conv.getExistingOrNewIndex(targetName, lvalueType, ssa);
       final int newIndex;
       if (useOldSSAIndices) {
         assert updatedRegions == null : "Returning updated regions is only for new indices";
@@ -1281,9 +1281,9 @@ class AssignmentFormulaHandler {
         !useOldSSAIndices || updatedRegions == null,
         "With old SSA indices returning updated regions does not make sense");
 
-    if (lvalueType instanceof CArrayType) {
+    if (lvalueType instanceof CArrayType cArrayType) {
       return makeDestructiveArrayAssignment(
-          (CArrayType) lvalueType,
+          cArrayType,
           rvalueType,
           lvalue,
           rvalue,
